index.css
body {
  margin: 0;
}
.root {
  width: 100%;
  height: 100%;
  display: grid;
  grid-auto-rows: min-content auto;
}

.nav {
  background: cadetblue;
  color: white;
  display:flex;
  justify-content: space-between;
}

.nav .heading {
  margin-left: 15px;
  font-style: italic;
}

.boxes {
  display: flex;
  background: darkslategrey;
  padding: 5%;
  justify-content: space-evenly;
}

.box {
  width: 35%;
  height: 350px;
  background: white;
  border-radius: 8px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.box form {
  width: 90%;
  height: 90%;
  margin: 0px;
}
form textarea {
  width: 100%;
  height: 100%;
  border: none;
  resize: none;
}

